EUI-8662 Register other org dx number function

--- a/src/register/components/document-exchange-reference/document-exchange-reference.component.html
+++ b/src/register/components/document-exchange-reference/document-exchange-reference.component.html
@@ -1,10 +1,23 @@
 <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
+  <ng-container *ngIf="dxError">
+    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+      <h2 class="govuk-error-summary__title" id="error-summary-title">
+        There is a problem
+      </h2>
+      <div class="govuk-error-summary__body">
+        <ul class="govuk-list govuk-error-summary__list">
+          <li>
+            <a href="register-org/document-exchange-reference#{{dxError.fieldId}}">{{dxError.description}}</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:void(0)">Back</a>
       <span class="govuk-caption-xl">Register an organisation</span>
-      <form>
-
+      <form [formGroup]="dxForm">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -18,13 +31,15 @@
             </div>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="document-exchange" name="document-exchange" type="radio" value="yes">
+                <input class="govuk-radios__input" type="radio" value="yes"
+                  id="document-exchange-yes" name="documentExchange" formControlName="documentExchange">
                 <label class="govuk-label govuk-radios__label" for="document-exchange-yes">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="document-exchange" name="document-exchange" type="radio" value="no">
+                <input class="govuk-radios__input" type="radio" value="no"
+                  id="document-exchange-no" name="documentExchange" formControlName="documentExchange">
                 <label class="govuk-label govuk-radios__label" for="document-exchange-no">
                   No
                 </label>
@@ -34,7 +49,7 @@
         </div>
 
         <div class="govuk-button-group">
-          <button class="govuk-button" data-module="govuk-button">
+          <button class="govuk-button govuk-button--primary" data-module="govuk-button" (click)="onContinue()">
             Continue
           </button>
         </div>
