--- a/src/register-org/components/document-exchange-reference/document-exchange-reference.component.html
+++ b/src/register-org/components/document-exchange-reference/document-exchange-reference.component.html
@@ -15,9 +15,9 @@
   </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a class="govuk-back-link" href="javascript:void(0)">Back</a>
+      <a class="govuk-back-link" href="javascript:history.back()">Back</a>
       <span class="govuk-caption-xl">Register an organisation</span>
-      <form [formGroup]="dxForm">
+      <form [formGroup]="dxFormGroup">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
