--- a/src/register-org/components/before-you-start/before-you-start.component.html
+++ b/src/register-org/components/before-you-start/before-you-start.component.html
@@ -1,4 +1,4 @@
-<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
+<main id="content" class="govuk-main-wrapper govuk-!-margin-top-4" role="main" tabindex="-1">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
