--- a/src/register-org/components/organisation-type/organisation-type.component.html
+++ b/src/register-org/components/organisation-type/organisation-type.component.html
@@ -8,7 +8,7 @@
       </h1>
       <hr>
       <div class="govuk-body govuk-!-margin-top-6">
-        <form>
+        <form [formGroup]="organisationTypeFormGroup">
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -68,8 +68,8 @@
                       </label>
                       <select class="govuk-select govuk-!-width-two-thirds"
                         id="other-organisation-type" name="otherOrganisationType" formControlName="otherOrganisationType">
-                        <option>--Select a value--</option>
-                        <option *ngFor="let organisationType of otherOrganisationTypes$ | async" value="{{organisationType.key}}">
+                        <option [ngValue]="'none'" disabled>--Select a value--</option>
+                        <option *ngFor="let organisationType of otherOrganisationTypes$ | async" [ngValue]="organisationType.key">
                           {{organisationType.value_en}}
                         </option>
                       </select>
