--- a/src/register-org/components/organisation-type/organisation-type.component.html
+++ b/src/register-org/components/organisation-type/organisation-type.component.html
@@ -17,36 +17,12 @@
                 </h1>
               </legend>
               <div class="govuk-radios" data-module="govuk-radios">
-                <div class="govuk-radios__item">
+                <div class="govuk-radios__item" *ngFor="let organisationType of organisationTypes$ | async">
                   <input class="govuk-radios__input" type="radio"
-                    id="solicitor-organisation" name="organisationType" value="solicitorOrganisation" formControlName="organisationType"
+                    [id]="organisationType.key" name="organisationType" [value]="organisationType.key" formControlName="organisationType"
                     (click)="canShowOtherOrganisationTypes(false)">
-                  <label class="govuk-label govuk-radios__label" for="solicitor-organisation">
-                    Solicitor organisation
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio"
-                    id="probate-practitioner" name="organisationType" value="probatePractitioner" formControlName="organisationType"
-                    (click)="canShowOtherOrganisationTypes(false)">
-                  <label class="govuk-label govuk-radios__label" for="probate-practitioner">
-                    Probate practitioner or chartered surveyor
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio"
-                    id="local-authority" name="organisationType" value="localAuthority" formControlName="organisationType"
-                    (click)="canShowOtherOrganisationTypes(false)">
-                  <label class="govuk-label govuk-radios__label" for="local-authority">
-                    Local authority
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio"
-                    id="government-department" name="organisationType" value="governmentDepartment" formControlName="organisationType"
-                    (click)="canShowOtherOrganisationTypes(false)">
-                  <label class="govuk-label govuk-radios__label" for="government-department">
-                    Government department (TBC)
+                  <label class="govuk-label govuk-radios__label" [for]="organisationType.key">
+                    {{organisationType.value_en}}
                   </label>
                 </div>
                 <div class="govuk-radios__item">
@@ -69,8 +45,8 @@
                       <select class="govuk-select govuk-!-width-two-thirds"
                         id="other-organisation-type" name="otherOrganisationType" formControlName="otherOrganisationType">
                         <option [ngValue]="'none'" disabled>--Select a value--</option>
-                        <option *ngFor="let organisationType of otherOrganisationTypes$ | async" [ngValue]="organisationType.key">
-                          {{organisationType.value_en}}
+                        <option *ngFor="let otherOrganisationType of otherOrganisationTypes$ | async" [ngValue]="otherOrganisationType.key">
+                          {{otherOrganisationType.value_en}}
                         </option>
                       </select>
                     </div>
