EUI-8721 Register other org - Registered with a regulator

--- a/src/register-org/components/registered-with-regulator/registered-with-regulator.component.html
+++ b/src/register-org/components/registered-with-regulator/registered-with-regulator.component.html
@@ -24,13 +24,10 @@
           <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you have a document exchange reference for your main office?
+                Are you (as an individual) registered with a regulator?
               </h1>
             </legend>
             <hr>
-            <div id="document-exchange-hint" class="govuk-hint">
-              Document Exchange (DX) is a service that enables solicitors to move large amounts of paperwork between one another.
-            </div>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" type="radio" value="yes"
