Finalisation for testing address component

--- a/src/register/components/before-you-start/before-you-start.component.html
+++ b/src/register/components/before-you-start/before-you-start.component.html
@@ -53,7 +53,8 @@
           </div>
         </form>
       </div>
-      <xuilib-write-address-field [formGroup]="formGroup" [internationalFormGroup]="internationalFormGroup" [isExpanded]="false"></xuilib-write-address-field>
+      <!-- Sreekanth: Remove once tested -->
+      <xuilib-write-address-field [formGroup]="formGroup" [isExpanded]="false"></xuilib-write-address-field>
       <h3 class="govuk-heading-m">If you're already registered for MyHMCTS</h3>
       <div class="govuk-body">
         <p>You can:</p>
