EUI-8727 Register other org - New Terms and Conditions

--- a/src/app/components/terms-and-conditions-register-other-org/terms-and-conditions-register-other-org.component.html
+++ b/src/app/components/terms-and-conditions-register-other-org/terms-and-conditions-register-other-org.component.html
@@ -10,26 +10,26 @@
       <p class="govuk-body">Click on the links below to go straight to more information on each area:</p>
       <div class="govuk-body">
         <ul class="govuk-list govuk-list--bullet">
-          <li><a class="govuk-link" href="terms-and-conditions-new#how-to-contact-us">Who we are and how to contact us.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#accept-these-terms">By using our site you accept these terms.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#other-terms">There are other terms that may apply to you.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#change-to-these-terms">We may make changes to these terms.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#changes-to-our-site">We may make changes to our site.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#suspend-or-withdraw-our-site">We may suspend or withdraw our site.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#agreement-to-someone-else">We may transfer this agreement to someone else.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#account-details-safe">You must keep your account details safe.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#materials-on-our-site">How you may use material on our site.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#information-on-this-site">Do not rely on information on our site.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#websites-we-link-to">We are not responsible for websites we link to.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#not-approved-by-us">User-generated content is not approved by us.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#report-content">How to complain about or report content.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#damage-suffered-by-you">Our responsibility for loss or damage suffered by you.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#personal-information">How we may use your personal information.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#uploading-content-to-our-site">Uploading content to our site.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#use-material-you-upload">Rights you are giving us to use material you upload.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#viruses-you-must-not-introduce-them">We are not responsible for viruses and you must not introduce them.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#linking-to-our-site">Rules about linking to our site.</a></li>
-          <li><a class="govuk-link" href="terms-and-conditions-new#dispute-laws">Which country's laws apply to any disputes?</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#how-to-contact-us">Who we are and how to contact us.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#accept-these-terms">By using our site you accept these terms.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#other-terms">There are other terms that may apply to you.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#change-to-these-terms">We may make changes to these terms.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#changes-to-our-site">We may make changes to our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#suspend-or-withdraw-our-site">We may suspend or withdraw our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#agreement-to-someone-else">We may transfer this agreement to someone else.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#account-details-safe">You must keep your account details safe.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#materials-on-our-site">How you may use material on our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#information-on-this-site">Do not rely on information on our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#websites-we-link-to">We are not responsible for websites we link to.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#not-approved-by-us">User-generated content is not approved by us.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#report-content">How to complain about or report content.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#damage-suffered-by-you">Our responsibility for loss or damage suffered by you.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#personal-information">How we may use your personal information.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#uploading-content-to-our-site">Uploading content to our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#use-material-you-upload">Rights you are giving us to use material you upload.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#viruses-you-must-not-introduce-them">We are not responsible for viruses and you must not introduce them.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#linking-to-our-site">Rules about linking to our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#dispute-laws">Which country's laws apply to any disputes?</a></li>
         </ul>
       </div>
       <h3 class="govuk-heading-m" id="how-to-contact-us">Who we are and how to contact us</h3>
@@ -46,7 +46,7 @@
         These terms of use refer to the following additional terms, which also apply to your use of our site:
         <ul class="govuk-list govuk-list--bullet">
           <li>
-            <a class="govuk-link" href="https://hmcts-access.service.gov.uk/privacy-policy" target="_blank">Our Privacy Policy</a>. See further under <a class="govuk-link" href="terms-and-conditions-new#personal-information">How we may use your personal information</a>.
+            <a class="govuk-link" href="https://hmcts-access.service.gov.uk/privacy-policy" target="_blank">Our Privacy Policy</a>. See further under <a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#personal-information">How we may use your personal information</a>.
           </li>
           <li>
             <a class="govuk-link" href="https://tools.hmcts.net/confluence/display/ISMS/Acceptable+Use?preview=/1535414767/1604486259/HMCTS%20Acceptable%20Use%20Policy%20v2.0.pdf" target="_blank">Our Acceptable Use Policy</a>, which sets out the permitted uses and prohibited uses of our site.
@@ -164,7 +164,7 @@
       <p class="govuk-body">Any content you upload to our site will be considered non-confidential and non-proprietary.
           You retain all of your ownership rights in your content, but you are required to grant us and other users of our site a limited licence to use,
           store and copy that content and to distribute and make it available to third parties.
-            The rights you license to us are described in <a class="govuk-link" href="terms-and-conditions-new#materials-on-our-site">Rights you are giving us to use material you upload</a>.</p>
+            The rights you license to us are described in <a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#materials-on-our-site">Rights you are giving us to use material you upload</a>.</p>
       <p class="govuk-body">We also have the right to disclose your identity to any third party who is claiming that any content posted or uploaded by you to our site constitutes a violation of their intellectual property rights
           or of their right to privacy.</p>
       <p class="govuk-body">We have the right to remove any posting you make on our site if, in our opinion, your post does not comply with the content standards set out in <a class="govuk-link" href="https://tools.hmcts.net/confluence/display/ISMS/Acceptable+Use?preview=/1535414767/1604486259/HMCTS%20Acceptable%20Use%20Policy%20v2.0.pdf" target="_blank">our Acceptable Use Policy</a>.</p>
