--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -11,8 +11,8 @@
           <dd class="govuk-summary-list__value">{{ registrationData.name }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
-              [routerLink]="'/register-org-new/company-house-details'">Change
-              <span class="govuk-visually-hidden">Organisation name</span>
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
+              Change<span class="govuk-visually-hidden">Organisation name</span>
             </a>
           </dd>
         </div>
@@ -24,7 +24,7 @@
           <dd class="govuk-summary-list__value">{{ registrationData.companyHouseNumber }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:history.back()"
-              [routerLink]="'/register-org-new/company-house-details'">
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
               Change<span class="govuk-visually-hidden">Company registration number</span>
             </a>
           </dd>
@@ -50,7 +50,7 @@
           <dd class="govuk-summary-list__value">{{ registrationData.dxNumber }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
-              [routerLink]="'/register-org-new/document-exchange-reference-details'">
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/document-exchange-reference-details">
               Change<span class="govuk-visually-hidden">DX reference</span>
             </a>
           </dd>
@@ -64,7 +64,7 @@
           <dd class="govuk-summary-list__value">{{ registrationData.services }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
-              [routerLink]="'/register-org-new/organisation-services-access'">
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-services-access">
               Change<span class="govuk-visually-hidden">Service to access</span>
             </a>
           </dd>
@@ -76,7 +76,7 @@
           <dt class="govuk-summary-list__key">Organisation type</dt>
           <dd class="govuk-summary-list__value">{{ registrationData.organisationType }}</dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)" [routerLink]="'/register-org-new/organisation-type'">
+            <a class="govuk-link" href="javascript:void(0)" routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-type">
               Change<span class="govuk-visually-hidden">Organisation type</span>
             </a>
           </dd>
@@ -89,7 +89,7 @@
           <dd class="govuk-summary-list__value">{{ registrationData.regulatoryOrgType }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
-              [routerLink]="'/register-org-new/registered-with-regulator'">
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
               Change<span class="govuk-visually-hidden">Regulatory organisation type</span>
             </a>
           </dd>
@@ -98,12 +98,13 @@
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">What regulator are you(as an individual) registered with?</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.reulatorRegisteredWith }}</dd>
+          <dt class="govuk-summary-list__key">What regulator are you (as an individual) registered with?</dt>
+          <dd class="govuk-summary-list__value">{{ registrationData.regulatorRegisteredWith }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
-              [routerLink]="'/register-org-new/registered-with-regulator'">
-              Change<span class="govuk-visually-hidden">What regulator are you(as an individual) registered with?</span>
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
+              Change<span class="govuk-visually-hidden">What regulator are you (as an individual) registered
+                with?</span>
             </a>
           </dd>
         </div>
@@ -116,7 +117,8 @@
           <dt class="govuk-summary-list__key">First name</dt>
           <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.firstName }}</dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)" [routerLink]="'/register-org-new/contact-details'">
+            <a class="govuk-link" href="javascript:void(0)" 
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
               Change<span class="govuk-visually-hidden">First name</span>
             </a>
           </dd>
@@ -128,7 +130,8 @@
           <dt class="govuk-summary-list__key">Last name</dt>
           <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.lastName }}</dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)" [routerLink]="'/register-org-new/contact-details'">
+            <a class="govuk-link" href="javascript:void(0)" 
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
               Change<span class="govuk-visually-hidden">Last name</span>
             </a>
           </dd>
@@ -140,7 +143,8 @@
           <dt class="govuk-summary-list__key">Email address</dt>
           <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.workEmailAddress }}</dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)" [routerLink]="'/register-org-new/contact-details'">
+            <a class="govuk-link" href="javascript:void(0)" 
+            routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
               Change<span class="govuk-visually-hidden">Email address</span>
             </a>
           </dd>
@@ -153,7 +157,7 @@
         <li>your personal and organisation detils are correct</li>
         <li>you have used your registered office address and not a personal or home address</li>
         <li>you are creating an account for your organisation for the first time</li>
-        <li>you are authorised to register an account on behalf of your ogrnaisation</li>
+        <li>you are authorised to register an account on behalf of your organisation</li>
       </ul>
 
       <div class="govuk-warning-text">
