Fix review comment

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -164,7 +164,7 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive">Warning</span>
-          Make sure all information is correct as your appliction will be rejected if it contains errors.
+          Make sure all information is correct as your application will be rejected if it contains errors.
         </strong>
       </div>
 
