--- a/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
+++ b/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
@@ -10,7 +10,7 @@
         <div class="govuk-body govuk-!-margin-top-6">
            <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                <div class="govuk-hint">Give as much detail as you can on the regulator or profressional body your organisation is registered with.</div>
+                <div class="govuk-hint">Give as much detail as you can on the regulator or professional body your organisation is registered with.</div>
               </legend>
           </fieldset>
           <fieldset class="govuk-fieldset">
