Add code to display and use registered address component

--- a/src/register-org/components/company-house-details/company-house-details.component.html
+++ b/src/register-org/components/company-house-details/company-house-details.component.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="govuk-button-group">
-          <button class="govuk-button" data-module="govuk-button">
+          <button class="govuk-button" data-module="govuk-button" (click)="onContinue()">
             Continue
           </button>
         </div>
